# fr-cli

./: .gitignore  A2A_AND_PROVIDERS_GUIDE.md  AGENTS.md  CHANGELOG.md  LICENSE  MANIFEST.in  MANUAL.md  MODULES.md  NEW_PROVIDERS_GUIDE.md  README.md  TEST_REPORT.md  USAGE.md  demo_mail.py  demo_step_by_step.py  demo_structured_tools.py  fr-cli-installer-tmp.spec  models.yaml.example  pyproject.toml  setup_mail.py  structure.py  test_full.py  test_integration.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
fr_cli/: README.md  WEAPON.MD  __init__.py  main.py  requirements.txt
fr_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fr_cli/addon/: plugin.py
fr_cli/agent/: __init__.py  a2a.py  acp.py  autolearn.py  autosummary.py  client.py  coding_helper.py  context_files.py  executor.py  gateway.py  generator.py  hermes.py  hermes_daemon.py  image_and_parallel.py  manager.py  master.py  master_prompt.py  personality.py  plugin_system.py  remote.py  server.py  shell_mode.py  skills.py  workflow.py  workflow_system.py  zsh_plugin.sh
fr_cli/breakthrough/: update.py
fr_cli/command/: __init__.py  executor.py  registry.py  security.py
fr_cli/conf/: config.py  wizard.py
fr_cli/core/: chat.py  core.py  intent.py  llm.py  model_factory.py  providers.py  recommender.py  stream.py  sysmon.py  thinking.py
release/: fr-cli-README.md  fr-cli-install  fr-cli-install.bat  fr-cli-install.sh  fr_cli-2.1.0-py3-none-any.whl  fr_cli-2.2.3-py3-none-any.whl  fr_cli-2.2.4-py3-none-any.whl  fr_cli-2.2.5-py3-none-any.whl  fr_cli-2.2.6-py3-none-any.whl  fr_cli-2.2.7-py3-none-any.whl
tests/: run_live_demo.py  test_a2a_and_providers.py  test_agent_client.py  test_agent_server.py  test_ai_save_file_with_verify.py  test_all.py  test_auto_session.py  test_builtins.py  test_coding_helper.py  test_dataframe.py  test_gatekeeper.py  test_integration.py  test_integration_real.py  test_intent_classification.py  test_launcher.py  test_master_agent.py  test_master_prompt_fix.py  test_model_config.py  test_new_features.py  test_new_providers.py  test_structured_tools.py
workspaces/: hello.txt
(+29 files in other folders)
