[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fr-cli"
version = "2.2.5"
description = "凡人打字机 - 支持多模型(Zhipu/DeepSeek/Kimi/Qwen/StepFun/MiniMax/Spark)的终极全能终端工具"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "FANREN CLI Author"},
]
keywords = ["zhipuai", "deepseek", "kimi", "qwen", "cli", "ai", "terminal", "chatbot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = [
    "zhipuai>=2.0.0",
    "openai>=1.0.0",
    "requests>=2.28.0",
    "mcp>=1.6.0",
]

[project.optional-dependencies]
data = ["pandas>=1.5.0", "openpyxl>=3.0.0"]
db = ["pymysql>=1.0.0", "psycopg2-binary>=2.9.0", "pyodbc>=4.0.0", "oracledb>=1.3.0"]
rag = ["chromadb>=0.4.0", "sentence-transformers>=2.2.5"]
remote = ["paramiko>=3.0.0"]
spider = ["selenium>=4.10.0"]
cloud = ["bypy", "aligo", "msal"]
monitor = ["watchdog>=3.0.0"]
all = [
    "pandas>=1.5.0", "openpyxl>=3.0.0",
    "pymysql>=1.0.0", "psycopg2-binary>=2.9.0", "pyodbc>=4.0.0", "oracledb>=1.3.0",
    "chromadb>=0.4.0", "sentence-transformers>=2.2.5",
    "paramiko>=3.0.0",
    "selenium>=4.10.0",
    "bypy", "aligo", "msal",
    "watchdog>=3.0.0",
]

dev = [
    "pytest>=7.0.0",
    "build",
    "twine",
]

[project.scripts]
fr-cli = "fr_cli.main:main"

[project.urls]
Homepage = "https://github.com/yourname/fr-cli"
Issues = "https://github.com/yourname/fr-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fr_cli*"]
